name:                cardano-sl-x509
version:             3.0.0
synopsis:            Tool-suite for generating x509 certificates specialized for RSA with SHA-256
description:         See README
homepage:            https://github.com/input-output-hk/cardano-sl/x509/README.md
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018 IOHK
license:             MIT
license-file:        LICENSE
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications

  hs-source-dirs:     src

  build-depends: base >=4.7 && <5
               , aeson
               , asn1-encoding
               , asn1-types
               , base64-bytestring
               , bytestring
               , cardano-prelude
               , cryptonite
               , data-default-class
               , directory
               , exceptions
               , filepath
               , hourglass
               -- The IPv6 constructor has changed in 1.5 but Stackage
               -- lts 13.14 through 13.26 specifies ip 1.4.2.1.
               , ip == 1.4.*
               , text
               , unordered-containers
               , x509
               , x509-store
               , x509-validation
               , yaml

  exposed-modules: Data.X509.Extra
                   Cardano.X509.Configuration

test-suite cardano-sl-x509-test
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications

  type:               exitcode-stdio-1.0

  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Test.Cardano.X509.Configuration.Arbitrary
                      Test.Cardano.X509.Configuration

  build-depends:      base
                    , QuickCheck
                    , cardano-prelude
                    , cardano-sl-x509
                    , exceptions
                    , hedgehog
